cloveParser.py
# Generated from clove.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class cloveParser ( Parser ):

    grammarFileName = "clove.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'if'", "'then'", "'else'", "'for'", 
                     "'in'", "'range'", "'('", "','", "')'", "'while'", 
                     "'print'", "'&&'", "'||'", "'=='", "'!='", "'>'", "'<'", 
                     "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IDENTIFIER", 
                      "INTEGER", "FLOAT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_if_statement = 3
    RULE_for_loop = 4
    RULE_while_loop = 5
    RULE_print_statement = 6
    RULE_expression = 7
    RULE_boolean_expression = 8
    RULE_boolean_term = 9
    RULE_comparison = 10
    RULE_additive_expr = 11
    RULE_multiplicative_expr = 12
    RULE_factor = 13
    RULE_variable = 14
    RULE_number = 15

    ruleNames =  [ "program", "statement", "assignment", "if_statement", 
                   "for_loop", "while_loop", "print_statement", "expression", 
                   "boolean_expression", "boolean_term", "comparison", "additive_expr", 
                   "multiplicative_expr", "factor", "variable", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    IDENTIFIER=23
    INTEGER=24
    FLOAT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cloveParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cloveParser.StatementContext)
            else:
                return self.getTypedRuleContext(cloveParser.StatementContext,i)


        def getRuleIndex(self):
            return cloveParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = cloveParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8394788) != 0):
                self.state = 32
                self.statement()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(cloveParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(cloveParser.AssignmentContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(cloveParser.If_statementContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(cloveParser.For_loopContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(cloveParser.While_loopContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(cloveParser.Print_statementContext,0)


        def getRuleIndex(self):
            return cloveParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = cloveParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.assignment()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.if_statement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.for_loop()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.while_loop()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                self.print_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(cloveParser.VariableContext,0)


        def expression(self):
            return self.getTypedRuleContext(cloveParser.ExpressionContext,0)


        def getRuleIndex(self):
            return cloveParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = cloveParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.variable()
            self.state = 48
            self.match(cloveParser.T__0)
            self.state = 49
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(cloveParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cloveParser.StatementContext)
            else:
                return self.getTypedRuleContext(cloveParser.StatementContext,i)


        def getRuleIndex(self):
            return cloveParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)




    def if_statement(self):

        localctx = cloveParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(cloveParser.T__1)
            self.state = 52
            self.expression()
            self.state = 53
            self.match(cloveParser.T__2)
            self.state = 54
            self.statement()
            self.state = 55
            self.match(cloveParser.T__3)
            self.state = 56
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(cloveParser.VariableContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cloveParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(cloveParser.ExpressionContext,i)


        def statement(self):
            return self.getTypedRuleContext(cloveParser.StatementContext,0)


        def getRuleIndex(self):
            return cloveParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)




    def for_loop(self):

        localctx = cloveParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_for_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(cloveParser.T__4)
            self.state = 59
            self.variable()
            self.state = 60
            self.match(cloveParser.T__5)
            self.state = 61
            self.match(cloveParser.T__6)
            self.state = 62
            self.match(cloveParser.T__7)
            self.state = 63
            self.expression()
            self.state = 64
            self.match(cloveParser.T__8)
            self.state = 65
            self.expression()
            self.state = 66
            self.match(cloveParser.T__9)
            self.state = 67
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(cloveParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(cloveParser.StatementContext,0)


        def getRuleIndex(self):
            return cloveParser.RULE_while_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_loop" ):
                listener.enterWhile_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_loop" ):
                listener.exitWhile_loop(self)




    def while_loop(self):

        localctx = cloveParser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_while_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(cloveParser.T__10)
            self.state = 70
            self.expression()
            self.state = 71
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(cloveParser.ExpressionContext,0)


        def getRuleIndex(self):
            return cloveParser.RULE_print_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_statement" ):
                listener.enterPrint_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_statement" ):
                listener.exitPrint_statement(self)




    def print_statement(self):

        localctx = cloveParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(cloveParser.T__11)
            self.state = 74
            self.match(cloveParser.T__7)
            self.state = 75
            self.expression()
            self.state = 76
            self.match(cloveParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolean_expression(self):
            return self.getTypedRuleContext(cloveParser.Boolean_expressionContext,0)


        def getRuleIndex(self):
            return cloveParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = cloveParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.boolean_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boolean_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolean_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cloveParser.Boolean_termContext)
            else:
                return self.getTypedRuleContext(cloveParser.Boolean_termContext,i)


        def getRuleIndex(self):
            return cloveParser.RULE_boolean_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean_expression" ):
                listener.enterBoolean_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean_expression" ):
                listener.exitBoolean_expression(self)




    def boolean_expression(self):

        localctx = cloveParser.Boolean_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_boolean_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.boolean_term()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 81
                self.match(cloveParser.T__12)
                self.state = 82
                self.boolean_term()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boolean_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cloveParser.ComparisonContext)
            else:
                return self.getTypedRuleContext(cloveParser.ComparisonContext,i)


        def getRuleIndex(self):
            return cloveParser.RULE_boolean_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean_term" ):
                listener.enterBoolean_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean_term" ):
                listener.exitBoolean_term(self)




    def boolean_term(self):

        localctx = cloveParser.Boolean_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_boolean_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.comparison()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 89
                self.match(cloveParser.T__13)
                self.state = 90
                self.comparison()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additive_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cloveParser.Additive_exprContext)
            else:
                return self.getTypedRuleContext(cloveParser.Additive_exprContext,i)


        def getRuleIndex(self):
            return cloveParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)




    def comparison(self):

        localctx = cloveParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.additive_expr()
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 98
            self.additive_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Additive_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicative_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cloveParser.Multiplicative_exprContext)
            else:
                return self.getTypedRuleContext(cloveParser.Multiplicative_exprContext,i)


        def getRuleIndex(self):
            return cloveParser.RULE_additive_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditive_expr" ):
                listener.enterAdditive_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditive_expr" ):
                listener.exitAdditive_expr(self)




    def additive_expr(self):

        localctx = cloveParser.Additive_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_additive_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.multiplicative_expr()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19 or _la==20:
                self.state = 105
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [19]:
                    self.state = 101
                    self.match(cloveParser.T__18)
                    self.state = 102
                    self.multiplicative_expr()
                    pass
                elif token in [20]:
                    self.state = 103
                    self.match(cloveParser.T__19)
                    self.state = 104
                    self.multiplicative_expr()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiplicative_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cloveParser.FactorContext)
            else:
                return self.getTypedRuleContext(cloveParser.FactorContext,i)


        def getRuleIndex(self):
            return cloveParser.RULE_multiplicative_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicative_expr" ):
                listener.enterMultiplicative_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicative_expr" ):
                listener.exitMultiplicative_expr(self)




    def multiplicative_expr(self):

        localctx = cloveParser.Multiplicative_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_multiplicative_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.factor()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21 or _la==22:
                self.state = 115
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [21]:
                    self.state = 111
                    self.match(cloveParser.T__20)
                    self.state = 112
                    self.factor()
                    pass
                elif token in [22]:
                    self.state = 113
                    self.match(cloveParser.T__21)
                    self.state = 114
                    self.factor()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(cloveParser.ExpressionContext,0)


        def variable(self):
            return self.getTypedRuleContext(cloveParser.VariableContext,0)


        def number(self):
            return self.getTypedRuleContext(cloveParser.NumberContext,0)


        def getRuleIndex(self):
            return cloveParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = cloveParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_factor)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(cloveParser.T__7)
                self.state = 121
                self.expression()
                self.state = 122
                self.match(cloveParser.T__9)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.variable()
                pass
            elif token in [24, 25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.number()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(cloveParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return cloveParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = cloveParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(cloveParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(cloveParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(cloveParser.FLOAT, 0)

        def getRuleIndex(self):
            return cloveParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = cloveParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not(_la==24 or _la==25):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





